syntax = "proto3";

package user_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "validate/validate.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/Tel3scop/auth/pkg/user_v1;user_v1";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Auth API"
    version: "1.0.0"
    contact: {
      name: "Evgeniy Evstifeev"
      email: "evstifeevea@gmail.com"
    };
  };

  host: "localhost:8080",
  schemes: HTTP,
  schemes: HTTPS,
  consumes: "application/json",
  produces: "application/json",
};


service UserV1 {
  // Создать нового пользователя
  rpc Create(CreateRequest) returns (CreateResponse){
    option (google.api.http) = {
      post: "/user/v1/create"
      body: "*"
    };
  }
  rpc Get(GetRequest) returns (GetResponse){
    option (google.api.http) = {
      get: "/user/v1"
    };
  }

  rpc Update(UpdateRequest) returns (google.protobuf.Empty){
    option (google.api.http) = {
      patch: "/user/v1"
      body: "*"
    };
  }
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty){
    option (google.api.http) = {
      delete: "/user/v1"
    };
  }
}

enum Role {
  UNSPECIFIED = 0;
  USER = 1;
  ADMIN = 2;
}

message CreateRequest {
  // Имя пользователя
  string name = 1 [(validate.rules).string = {min_len:1, max_len:50}];
  // Электронная почта
  string email = 2 [(validate.rules).string.email = true];
  // Пароль
  string password = 3 [(validate.rules).string = {min_len:8, max_len:50}];
  // Подтверждение
  string password_confirm = 4 [(validate.rules).string = {min_len:8, max_len:50}];
  // Роль
  Role role = 5;
}

message CreateResponse {
  int64 id = 1;
}

message GetRequest {
  int64 id = 1;
}

message GetResponse {
  int64 id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
  string password_confirm = 5;
  Role role = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

message UpdateRequest {
  int64 id = 1;
  string name = 2;
  string email = 3;
  Role role = 4;
}

message DeleteRequest {
  int64 id = 1;
}
